<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:minHeight="130dp"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/book_name"
            style="@style/main_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Fangirl" />

        <TextView
            android:id="@+id/author"
            style="@style/main_item_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textStyle="normal"
            tools:text="Rainbow Rowell" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/secondary_item_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price"
                style="@style/secondary_item_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="40$" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/secondary_item_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/quantity" />

            <TextView
                android:id="@+id/quantity"
                style="@style/secondary_item_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_weight="1" >

        <Button
            android:id="@+id/sale_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="15dp"
            android:text="@string/sale"
            android:theme="@style/btn_style" />

    </RelativeLayout>

</LinearLayout>